--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1749,23 +1749,6 @@ jobs:
       - make-package
       - run: tools/scripts/retry.sh make -C master publish-dev
       - run: tools/scripts/retry.sh make -C agent publish-dev
-      - run:
-          name: Build and publish model_hub docker images
-          command: |
-            # Match on either "main", or any branch beginning with
-            # "release-". Note: because of Bash quoting rules, the start-of-line
-            # caret in our regex must be outside of the quotes.
-            if [[ ${CIRCLE_BRANCH} == "main" ]] || [[ ${CIRCLE_BRANCH} =~ ^"release-" ]]; then
-                # For main and release branches, we will tag and publish both the environment
-                # with the git hash as well as the version.  This will make that image available
-                # immediately for nightly tests.
-                make -C model_hub build-docker
-                tools/scripts/retry.sh make -C model_hub publish-docker
-            else
-                # Otherwise, only tag and publish the environment with the git hash.
-                make -C model_hub build-docker-dev
-                tools/scripts/retry.sh make -C model_hub publish-docker-dev
-            fi
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -1796,23 +1779,6 @@ jobs:
       - make-package-ee
       - run: tools/scripts/retry.sh make -C master publish-dev-ee
       - run: tools/scripts/retry.sh make -C agent publish-dev-ee
-      - run:
-          name: Build and publish model_hub docker images
-          command: |
-            # Match on either "main", or any branch beginning with
-            # "release-". Note: because of Bash quoting rules, the start-of-line
-            # caret in our regex must be outside of the quotes.
-            if [[ ${CIRCLE_BRANCH} == "main" ]] || [[ ${CIRCLE_BRANCH} =~ ^"release-" ]]; then
-                # For main and release branches, we will tag and publish both the environment
-                # with the git hash as well as the version.  This will make that image available
-                # immediately for nightly tests.
-                make -C model_hub build-docker
-                tools/scripts/retry.sh make -C model_hub publish-docker
-            else
-                # Otherwise, only tag and publish the environment with the git hash.
-                make -C model_hub build-docker-dev
-                tools/scripts/retry.sh make -C model_hub publish-docker-dev
-            fi
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
 
   package-and-push-system-rc:
@@ -1849,14 +1815,6 @@ jobs:
       - make-component:
           component: agent
           target: publish
-          dryrun: <<parameters.dryrun>>
-      - make-component:
-          component: model_hub
-          target: build-docker
-          dryrun: <<parameters.dryrun>>
-      - make-component:
-          component: model_hub
-          target: publish-docker
           dryrun: <<parameters.dryrun>>
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
@@ -1918,14 +1876,6 @@ jobs:
           component: agent
           target: release
           no_output_timeout: "30m"
-      - make-component:
-          component: model_hub
-          target: build-docker
-          dryrun: <<parameters.dryrun>>
-      - make-component:
-          component: model_hub
-          target: publish-docker
-          dryrun: <<parameters.dryrun>>
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -5647,7 +5597,7 @@ workflows:
           name: publish-python-package-release
           matrix:
             parameters:
-              path: ["harness", "model_hub"]
+              path: ["harness"]
               dryrun: [true]
           context: determined-dryrun
           filters: *release-dryrun
