--- a/helm/charts/determined/Chart.yaml
+++ b/helm/charts/determined/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 name: determined
 description: A Helm chart for Determined
 
-# This is a dummy value. The actual version string is passed through the
+# This is a placeholder value. The actual version string is passed through the
 # --version flag during helm package.
 version: "0.0.0"
 
@@ -14,6 +14,6 @@ home: https://github.com/determined-ai/determined.git
 # existing official release version (e.g., X.Y.Z) or specify a commit that has
 # been publicly published (all commits from main).
 #
-# This is a dummy value. The actual version string is passed through the
+# This is a placeholder value. The actual version string is passed through the
 # --app-version flag during helm package.
 appVersion: "0.0.0"
