--- a/.circleci/devcluster/multi-resource-pools.devcluster.yaml
+++ b/.circleci/devcluster/multi-resource-pools.devcluster.yaml
@@ -2,7 +2,7 @@ stages:
   - db:
       name: db
       port: 5434
-      image_name: postgres:$DET_POSTGRES_VERSION
+      image_name: 'postgres:{$DET_POSTGRES_VERSION}'
 
   - master:
       pre:
