--- a/.circleci/devcluster/priority.devcluster.yaml
+++ b/.circleci/devcluster/priority.devcluster.yaml
@@ -6,7 +6,7 @@ stages:
       db_name: db-priority-scheduler
       container_name: determined_db-priority-scheduler
       port: 5434
-      image_name: postgres:$DET_POSTGRES_VERSION
+      image_name: 'postgres:{$DET_POSTGRES_VERSION}'
 
   - elastic:
       name: elastic-priority-scheduler
