--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,6 +77,7 @@ repos:
         entry: ./pre-commit/lock-api-state.sh
         language: "script"
         description: "Attempts to generate a new buf.image.bin, and fails if there are changes to commit."
+        files: '^proto/'
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.28.0
