--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           python-version: '3.9'
           cache: 'pip'
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.22.0'
       # this action is not getting new features, but isn't deprecated yet
       # switch to just running pre-commit locally when/if that happens that's
       # why this one specifies a full version; presumably there will be a
