adding txt file; todo check branch build, add release-rc-filters, remove <<pipeline.parameters.det-version>>

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -104,6 +104,15 @@ release-dryrun: &release-dryrun
       # Tags like: v3.1.3+dryrun
       - /v\d+\.\d+\.\d+\+dryrun/
 
+release-dryrun: &release-dryrun
+  branches:
+    ignore:
+      - /.*/
+  tags:
+    only:
+      # Tags like: v3.1.3+dryrun
+      - /v\d+\.\d+\.\d+\+dryrun/
+
 upstream-feature-branch: &upstream-feature-branch
   branches:
     ignore:
@@ -1504,6 +1513,21 @@ commands:
     steps:
       - run: 
           command: pkill -SIGHUP -f "devcluster" && rm -rf /tmp/devcluster/lock
+
+  read-supported-versions:
+    steps:
+      - run:
+          name: Read Versions from File
+          command: |
+            VERSION_FILE="supported_versions.txt"
+            if [ -f "$VERSION_FILE" ]; then
+              SUPPORTED_VERSIONS=$(cat "$VERSION_FILE" | tr '\n' ' ')
+              # Export the variable to use in the matrix job
+              echo "export SUPPORTED_VERSIONS=\"$SUPPORTED_VERSIONS\"" >> $BASH_ENV
+            else
+              echo "Version file not found!"
+              exit 1
+            fi
 
   make-component:
     description: "Basic parameterized version of make for building Determined components."
@@ -3210,7 +3234,9 @@ jobs:
             - run: 
                 name: Fetch Tags & Checkout <<parameters.det-version>> Version
                 command: git fetch --tags && git checkout tags/<<parameters.det-version>>
-            - run: # given branch name, find most recent build, & substitute in ... ?
+            - run: 
+                name: Fetch Release Branch & checkout
+                command: # given branch name, find most recent build, & substitute in ... ?
             # 1. checkout git branch
             # 2. iterate through SHAs & check which is a match (for master, agent, etc) in docker image registry
             # 3. take first match & git fetch that SHA
@@ -4801,6 +4827,8 @@ workflows:
           name: build-go-ee
           context: github-read
 
+      - read-supported-versions
+
       - test-e2e:
           name: test-e2e-rbac
           context:
@@ -4813,7 +4841,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-cpu
@@ -4828,7 +4856,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-cpu-double
@@ -4845,7 +4873,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-cpu-oauth
@@ -4860,7 +4888,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-cpu-model-registry-rbac
@@ -4875,7 +4903,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-managed-devcluster
@@ -4895,7 +4923,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-managed-devcluster-resource-pools
@@ -4913,7 +4941,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-multi-k8s
@@ -4931,7 +4959,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-single-k8s
@@ -4947,7 +4975,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-port-registry
@@ -4962,7 +4990,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-cpu-elastic
@@ -4978,7 +5006,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-postgres10-with-ssl
@@ -4994,7 +5022,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-postgres14-with-ssl
@@ -5010,7 +5038,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-old-agent-versions
@@ -5025,7 +5053,7 @@ workflows:
           matrix:
             parameters:
               agent-version: ["0.17.10"]
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
           upgrade: true
 
       - test-e2e:
@@ -5042,7 +5070,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
       - test-e2e:
           name: test-e2e-saml
@@ -5057,7 +5085,7 @@ workflows:
           upgrade: true
           matrix:
             parameters:
-              det-version: *det-versions
+              det-version: << pipeline.parameters.SUPPORTED_VERSIONS >>
 
   test-e2e-longrunning:
     <<: *do-not-run-on-manual-trigger
