--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,7 +78,7 @@ repos:
         language: "script"
         description: "Fails if the existing protobuf definitions would generate a new buf.image.bin."
         files: '^proto/'
-        pass_names: false'
+        pass_filenames: false
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.28.0
