--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,6 +79,13 @@ repos:
         description: "Fails if the existing protobuf definitions would generate a new buf.image.bin."
         files: '^proto/'
         pass_filenames: false
+      - id: lock-published-urls
+        name: "Generate all_published_urls_ever.json (lock-published-urls.sh)"
+        entry: ./pre-commit/lock-published-urls.sh
+        language: "script"
+        description: "Ensure all redirect URLs are generated at commit time."
+        files: '^docs/'
+        pass_filenames: false
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.28.0
