--- a/.circleci/devcluster/react-rbac.devcluster.yaml
+++ b/.circleci/devcluster/react-rbac.devcluster.yaml
@@ -12,6 +12,9 @@ stages:
           initial_user_password: $INITIAL_USER_PASSWORD
           authz:
             rbac_ui_enabled: true
+            workspace_creator_assign_role:
+              enabled: true
+              role_id: 1
         port: 8082
         db:
           host: localhost
