--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,6 +79,7 @@ repos:
         description: "Fails if the existing protobuf definitions would generate a new buf.image.bin."
         files: '^proto/'
         pass_filenames: false
+        verbose: true
       - id: lock-published-urls
         name: "Generate all_published_urls_ever.json (lock-published-urls.sh)"
         entry: ./pre-commit/lock-published-urls.sh
