--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1553,7 +1553,7 @@ jobs:
             VERSIONS=$(awk '{ print "  - \"" $0 "\"" }' $INPUT_FILE)
 
             # Replace the existing values under det-versions with the new ones from the text file
-            sed -i.bak "/det-versions: &det-versions/{n;N;N;d}" .
+            sed -i.bak "/det-versions: &det-versions/{n;N;N;d}" $YAML_FILE
             sed -i "/det-versions: &det-versions/r /dev/stdin" $YAML_FILE \<<< "$VERSIONS"
 
             echo "Updated real_config.yaml:"
