--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -3268,6 +3268,7 @@ jobs:
                 target-stage: <<parameters.target-stage>>
 
       - when:
+          condition: <<parameters.upgrade>>
           steps:
             # Stop devcluster running on the past release.
             - stop-devcluster
