--- a/.circleci/devcluster/double-reattach.devcluster.yaml
+++ b/.circleci/devcluster/double-reattach.devcluster.yaml
@@ -1,13 +1,16 @@
 stages:
   - db:
       name: db
-      image_name: 'postgres:{$DET_POSTGRES_VERSION}'
+      image_name: "postgres:{$DET_POSTGRES_VERSION}"
   - master:
       pre:
         - sh: make -C tools prep-root
       config_file:
         security:
           initial_user_password: $INITIAL_USER_PASSWORD
+          token:
+            max_lifespan: 
+            default_lifespan: 
         db:
           host: localhost
           port: 5432
