INFENG-382: Release redesign (#10002)
INFENG-848: Fix gen-versions.py (#9908)

INFENG-809: Update CircleCI tag logic and add release dryrun workflow (#9877)

INFENG-812: fix model_hub Docker tag (#9809)

* Update package-and-push-system-dev and package-and-push-system-dev-ee
   CircleCI jobs to build dev Docker images correctly. Specifically, fix
   a bash if statement to check for if we're running the job from the
   "main" branch or a branch prefixed with "release-". The previous
   behavior would match on any git branch regardless.

INFENG-780: Remove CircleCI bumpversion (#9785)

* Remove bump2version ("bumpversion", colloquially) dependency, both
  literally from requirements.txt and also the last remaining reference
  in its config file, .bumpversion.cfg, along with the config file
  itself. The remaining reference was in .circleci/real_config.yml.
  Removing it, though, was somewhat tricky, and had a few knock-on
  effects that had to be solved.

  The version string itself was a default for the pipeline parameter
  det-version, which is threaded through the entirety of the build
  process as a source of truth for the Determined version
  information. Instead of updating the CircleCI config itself, we can
  dynamically generate it in .circleci/config.yml and set the parameter
  there. There's still some work left to do to get tag builds working
  correctly, but for now, I call version.sh to set det-version, which
  should work correctly for all branch builds, by returning the local
  version string, e.g. 0.34.0+2e616a3d7

* Update version.sh to fix a small bug that caused git tags with
  subsequent 'v's in them, e.g. v1.0.3-dev0, to be munged incorrectly
  into 1.0.3-de0. Now, we use ${parameter#word} shell expansion to
  remove the first singular 'v' from tags.

* Update two direct invocations of setup.py in CircleCI to instead use
  the build module. Invoking setup.py directly is deprecated.

* Update the agent creatio

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,4 @@
-export VERSION := $(shell cat ../VERSION)
+export VERSION := $(shell ../version.sh)
 .DEFAULT_GOAL := build
 
 SPHINXOPTS    = -W
@@ -52,8 +52,12 @@ build/swagger.stamp: ../proto/build/swagger/determined/api/v1/api.swagger.json s
 	mkdir -p build
 	touch $@
 
+.PHONY: gen-versions
+gen-versions:
+	python3 gen-versions.py -o _static/version-switcher/versions.json
+
 .PHONY: build
-build: build/sp-html.stamp
+build: gen-versions build/sp-html.stamp
 
 .PHONY: xml
 xml: build/sp-xml.stamp
