--- a/.circleci/devcluster/ssh-ecdsa.devcluster.yaml
+++ b/.circleci/devcluster/ssh-ecdsa.devcluster.yaml
@@ -27,7 +27,7 @@ stages:
         security:
           initial_user_password: $INITIAL_USER_PASSWORD
           ssh:
-            crypto_system: ECDSA
+            key_type: ECDSA
         resource_manager:
           type: agent
           default_aux_resource_pool: default
